...
            type="tag"
            style={[
              activeTab === "latest" && styles.tabTextActive,
              { color: activeTab === "latest" ? backgroundColor : textColor },
            ]}
          >
            Latest
          </ThemedText>
        </Pressable>

        <Pressable
          style={[
            styles.tab,
...
            type="tag"
            style={[
              activeTab === "featured" && styles.tabTextActive,
              { color: activeTab === "featured" ? backgroundColor : textColor },
            ]}
          >
            Featured
          </ThemedText>
        </Pressable>

        <Pressable
          style={[
            styles.tab,
...
