...
            </View>
          )}

          {/* Channel 1 */}
          {liveNow && (
            <View style={styles.channelSection}>
              <Pressable onPress={playFunction} style={styles.imageContainer} testID="live-channel-1">
                <Image
                  style={styles.image}
                  contentFit="cover"
                  transition={1000}
                  placeholder="blurhash"
                  source={optimizeLiveImage(liveNow?.artwork)}
...
              <View style={styles.liveNowContainer}>
                <View style={{ backgroundColor: textColor, padding: 4 }}>
                  <ThemedText
                    type="subtitle"
                    style={{ color: backgroundColor }}
                  >
                    {isBothChannelsLive ? "Live on 1" : "Live now"}
                  </ThemedText>
                </View>
                <Pressable
                  onPress={() =>
                    router.push(`/live/show/${liveNow.slug}` as any)
                  }
...
